--- a/.rubocop_rspec_base.yml
+++ b/.rubocop_rspec_base.yml
@@ -32,7 +32,7 @@ Metrics/CyclomaticComplexity:
 
 # We use YARD to enforce documentation. It works better than rubocop's
 # enforcement...rubocop complains about the places we re-open
-# `RSpec::Expectations` and `RSpec::Matchers` w/o having doc commments.
+# `RSpec::Expectations` and `RSpec::Matchers` w/o having doc comments.
 Style/Documentation:
   Enabled: false
 
